# KFlash

./: CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.py
cmake/: Helpers.cmake
include/: MainWindow.hpp
include/ui/: MainWindow.hpp
include/ui/MainMenu/: MenuBar.hpp
src/: Example.cpp  MainWindow.cpp  main.cpp
src/ui/: MainWindow.cpp
src/ui/MainMenu/: MenuBar.cpp
test/unit_test/: CMakeLists.txt  ExampleTest.cpp
